fixing marker and header on mobile

--- a/src/assets/stylesheets/components/_header.scss
+++ b/src/assets/stylesheets/components/_header.scss
@@ -7,10 +7,13 @@ header {
 
   .container {
     position: absolute;
-    z-index: 999999;
+    z-index: 999;
     display: flex;
     justify-content: space-between;
     line-height: 2.5em;
+    @media (min-width: 268px) and (max-width: 700px) {
+      padding: 10px;
+    }
   }
 
   ul,
@@ -42,5 +45,8 @@ header {
   p {
     font-weight: 500;
     margin: 0;
+    @media (min-width: 268px) and (max-width: 700px) {
+      visibility: hidden;
+    }
   }
 }
